# modelling-energy-systems

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  README.md  _config.yml  _toc.yml  changelog.md  index.md  pyproject.toml  references.bib
_static/: environment-2025-09.yml  environment-2025-10.yml  environment.yml  styles.css
advanced/: mixed-complementarity.md  nonlinear-v2.md  nonlinear.md  parametric-uncertainty.md  stochastic-programming.md  uncertainty.md
appendix/: duality-conversion.md  duality-examples.md  duality.md  game-theory.md  installing-python.md  kkts-summary.md  parametric-uncertainty-appendix.md  python-basics.md  robust-optimisation.md
basics/: dispatch-lp.md  duality-kkts.md  introduction.md  lp.md  markets-milp.md  milp.md  modelling-languages.md  sensitivity-analysis.md
reference/: about.md  reading.md
src/modelling_energy_systems/: cli.py  dispatch_lp.py  kkt.py  lp.py  lp_sensitivity.py  markets_milp.py  nonlinear.py  stochastic.py  util.py
tools/: calliope.md  modelling-languages.md  pyomo.ipynb
