[project]
name = "modelling-energy-systems"
version = "0.1.0"
# authors = ["Stefan Pfenninger <stefan@pfenninger.org>"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64"]

[tool.pixi.tasks]
figures = "modelling_energy_systems"
html = "jupyter-book build ."
clean = "jupyter-book clean ."
build = {depends_on = ["figures", "html"] }

[tool.pixi.dependencies]
python = "3.12.*"
jupyter-book = "1.0.0.*"
sphinx-book-theme = "1.1.2.*"
numpy = "1.26.4.*"
matplotlib = "3.8.4.*"
click = "8.1.*"
seaborn = "0.13.2.*"

[tool.pixi.pypi-dependencies]
modelling_energy_systems = { path = ".", editable = true }
sphinx-proof = "==0.2.0"

[project.scripts]
modelling_energy_systems = "modelling_energy_systems.cli:run"
