[project]
name = "modelling-energy-systems"
version = "0.1.0"
# authors = ["Stefan Pfenninger <stefan@pfenninger.org>"]

[tool.pixi.project]
channels = ["conda-forge", "gurobi"]
platforms = ["osx-arm64", "linux-64", "win-64"]

[tool.pixi.tasks]
figures = "modelling_energy_systems"
html = "jupyter-book build ."
clean = "jupyter-book clean ."
build = {depends-on = ["figures", "html"] }

[tool.pixi.dependencies]
python = "3.12.*"
jupyter-book = "1.0.4.post1.*"
sphinx-book-theme = "1.1.4.*"
numpy = "2.3.2.*"
matplotlib = "3.10.5.*"
click = "8.1.*"
seaborn = "0.13.2.*"
glpk = "5.0.*"
ipopt = "3.14.16.*"
gurobi = "12.*"
pyomo = "6.8.2.*"

[tool.pixi.pypi-dependencies]
modelling_energy_systems = { path = ".", editable = true }
sphinx-proof = "==0.2.0"
optimutils = "==1.1"

[project.scripts]
modelling_energy_systems = "modelling_energy_systems.cli:run"
